# mm-text-replacement-mod

./: .gitmodules  mm-schmiddys-tweaks.code-workspace  mm-text-replacer-mod.code-workspace
text-replacer-lib/: .gitignore  CMakeLists.txt  CMakePresets.json  setup_vcpkg.py
text-replacer-lib/src/: CMakeLists.txt  TextEntry.cpp  TextEntry.hpp  dumping.cpp  dumping.hpp  globals.hpp  lib_main.cpp  lib_main.hpp  main.cpp  main.hpp  recomp_mod_api.cpp  recomp_mod_api.hpp  recomp_utils.cpp  recomp_utils.hpp  settings.cpp  settings.hpp  utils.cpp  utils.hpp
text-replacer-mod/: .gitignore  build_mod.py  build_n64recomp_tools.py  mod.toml  mod_build.txt
text-replacer-mod/scr_OLD/: message_patch_2.c
text-replacer-mod/src/: message_patch.c  message_patch.h  tweak_globals.h
